syntax = "proto3";

package go.micro.srv.PutComment;

service Example {
	rpc PutComment(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Sessionid = 1;
	string Orderid = 2;
	string Comment = 3;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
}
